--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
-    "@netlify/blobs": "^7.0.0",
-    "netlify-identity-widget": "^1.9.2",
-    "parse-multipart-data": "^1.5.0",
+    "@vercel/blob": "^2.0.0",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.294.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "qrcode": "^1.5.3"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
