--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^0.9.0",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.3",
